crates/uv/tests/it/snapshots/it__ecosystem__pyx-external-uv-lock-output.snap
---
source: crates/uv/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 188 packages in [TIME]
