crates/uv/tests/it/snapshots/it__ecosystem__sentry-uv-lock-output.snap
---
source: crates/uv/tests/it/ecosystem.rs
expression: snapshot
---
exit_code: 0 (success)
----- stderr -----
Resolved 268 packages in [TIME]
